--- a/Contactus.html
+++ b/Contactus.html
@@ -21,7 +21,7 @@
     <!-- Onderstaande code is voor de kop van de pagina -->
     <div class="Contactusmain1">
  <h1 class="header">  Contact Us </h1>
-</div class="Contactusmain1">
+</div>
 <br>
 <!-- Onderstaande tekst is voor de twee afbeeldingen op de pagina. De div zorgt ervoor dat ze in een box zitten!-->
 <div class="contactlogo">
