--- a/Index.html
+++ b/Index.html
@@ -35,10 +35,9 @@
 <a class="ProductpageA"   href="Productpage.html">    
   <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
-      <p class="donuttext">Pink Fairy Donut</p>
+      <p class="donuttext"> Pink Fairy Donut </p>
       <br>
-      <p> 
-        The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
+      <p> The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
       <br>
       <h1> €2.99 </h1>
     </div>
@@ -46,11 +45,10 @@
 <!-- Onderstaande div is de tweede donut-->
 <a class="ProductpageA"   href="Productpage.html">
       <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutimg">
-      <p class="donuttext"> Brownie Donut </p>
+      <img src="/images/Cookie monster donutt.jpg" alt="donutimg">
+      <p class="donuttext"> Cookie Monster Donut </p>
       <br>
-      <p> 
-        The Brownie donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles. </p>
+      <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
       <br>
       <h1> €2.99  </h1>
     </div>
@@ -58,12 +56,14 @@
 <!-- Onderstaande div is de derde donut-->
 <a class="ProductpageA"   href="Productpage.html">
     <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutimg">
-      <p class="donuttext"> Confetti donut</p>
+      <img src="/images/Banana donut.avif" alt="donutimg">
+      <p class="donuttext"> Banana Split Donut </p>
       <br>
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
+      <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
+        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
+        The donut contains no filling and is topped with white flaky sprinkles.  </p>
       <br>
-      <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
+      <h1> €2.99 </h1>
     </div>
 </a>
 <!--onderstaande div is de Footer -->
