--- a/Shop.html
+++ b/Shop.html
@@ -26,7 +26,7 @@
           <!-- De code van 27 t/m 139 zijn allemaal identiek aan elkaar, dus doe ik alleen bij de eerste donut een uitgebreide verklaring van de code -->
     <div class="Product"> 
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
-      <h1> The Pink Fiary Donut </h1> <!-- Is de naam van de donut -->
+      <h1> Pink Fiary Donut </h1> <!-- Is de naam van de donut -->
       <br> 
       <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
       <br> 
@@ -35,7 +35,7 @@
 
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <h1> The Brownie Donut </h1>
+      <h1> Brownie Donut </h1>
       <br>
       <p> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
       <br>
@@ -44,7 +44,7 @@
 
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
-      <h1> The Sugared Donut </h1>
+      <h1> Sugared Donut </h1>
       <br>
       <p> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. </p>
       <br>
@@ -53,7 +53,7 @@
 
     <div class="Product">
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <h1> The Confetti Donut </h1>
+      <h1> Confetti Donut </h1>
       <br>
       <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped 
         <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
@@ -64,7 +64,7 @@
 
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
-      <h1> The Cookie Monster Donut </h1>
+      <h1> Cookie Monster Donut </h1>
       <br>
       <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
       <br>
@@ -73,7 +73,7 @@
 
     <div class="Product">
       <img src="/images/Banana donut.avif" alt="donutpic">
-      <h1> The Banana Split Donut </h1>
+      <h1> Banana Split Donut </h1>
       <br>
       <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
         <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
@@ -84,7 +84,7 @@
 
     <div class="Product">
       <img src="/images/Apple cider donut.jpg" alt="donutpic">
-      <h1> The Apple Cider Donut </h1>
+      <h1> Apple Cider Donut </h1>
       <br>
       <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! 
         <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
@@ -95,7 +95,7 @@
 
     <div class="Product">
       <img src="/images/Blueberry donut.avif" alt="donutpic">
-      <h1> The Blueberry Donut </h1>
+      <h1> Blueberry Donut </h1>
       <br>
       <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles. </p>
       <br>
@@ -104,7 +104,7 @@
 
     <div class="Product">
       <img src="/images/Koningsdag donut.jpg" alt="donutpic">
-      <h1> The Kingsday Donut </h1>
+      <h1> Kingsday Donut </h1>
       <br>
       <p> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. </p>
       <br>
@@ -113,7 +113,7 @@
 
     <div class="Product">
       <img src="/images/Lemon donut.jpg" alt="donutpic">
-      <h1> The Lemon Donut </h1>
+      <h1> Lemon Donut </h1>
       <br>
       <p> The Lemon Donut is a donut for people who love sour food. The donut is topped with a yellow glazing which is sour and contains no filling. </p>
       <br>
@@ -122,7 +122,7 @@
 
     <div class="Product">
       <img src="/images/Oreo Donut.jpg" alt="donutpic">
-      <h1> The Oreo Donut </h1>
+      <h1> Oreo Donut </h1>
       <br>
       <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing. </p>
       <br>
@@ -131,7 +131,7 @@
 
     <div class="Product">
       <img src="/images/Jelly donut.jpg" alt="donutpic">
-      <h1> The Jelly Donut </h1>
+      <h1> Jelly Donut </h1>
       <br>
       <p> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. </p>
       <br>
@@ -146,7 +146,7 @@
 <!-- Dit is een aparte sectie voor de "unusual" donuts. Regel 135 t/m 159 is identitiek aan elkaar, dus leg ik de eerste donut alleen uitgebreid uit. -->
     <div class="Product"> <!-- om te groeperen -->
       <img src="/images/Spicy Donut.jpg" alt="donutpic"> <!-- De afbeelding van de donut -->
-      <h1> The Spicy Donut </h1> <!-- Naam van de donut -->
+      <h1> Spicy Donut </h1> <!-- Naam van de donut -->
       <br> 
       <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p> <!-- Beschrijving van de donu -->
       <br>
@@ -155,7 +155,7 @@
 
     <div class="Product">
       <img src="/images/Bacon donut.png" alt="donutpic">
-      <h1> The Bacon Donut </h1>
+      <h1> Bacon Donut </h1>
       <br>
       <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
       <br>
@@ -164,7 +164,7 @@
 
     <div class="Product">
       <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
-      <h1> The Matcha Donut </h1>
+      <h1> Matcha Donut </h1>
       <br>
       <p> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. </p>
       <br>
