--- a/Contactus.html
+++ b/Contactus.html
@@ -21,20 +21,20 @@
     <!-- Onderstaande code is voor de kop van de pagina -->
     <div class="Contactusmain1">
  <h1 class="header">  Contact Us </h1>
-</div class="Contactusmain1">
+</div>
 <br>
 <!-- Onderstaande tekst is voor de twee afbeeldingen op de pagina. De div zorgt ervoor dat ze in een box zitten!-->
-<div class="contactlogo">
+<div id="contactlogo">
   <img src="/images/Whatsapp logo png.webp" alt="Logo contact us2" width="32%" height="32%" style="justify-content: space-between; display: flex;"> 
    <img src="/images/Google maps logo Dickies.png" alt="google maps" width="20%" height="20%" style="justify-content: space-between;display: flex;">
-   </div class="contactlogo">
+   </div>
    <!-- Alle informatie staat hier onder. De div zorgt ervoor dat het in een box zit.-->
                 <div class="Contactusmain1"> 
                   <p> <h1 style="justify-content: space-between;"> Phone-number: 06-71245678 </h1> </p>
-                <p> <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
+                  <p> <h1 style="justify-content: space-between;"> E-mail: DickiesDonuts@gmail.com </h1> </p>
                   <p> <h1 style="justify-content: space-between;"> Location: Eindhoven, Keizersgracht 19 </h1> </p>
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
-                </div class="Contactusmain1">
+                </div>
                 <div class="footer">
                   © 2024 Dickies-Donuts. All Rights Reserved.
                  <br>
