--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
       </li>
     </ul>
     <!-- Onderstaande Div is de homepagina tekst en de shopnow knop er onder-->
-    <div class="HomepageText">
+    <div id="HomepageText">
       <p>
        Are you hungry and want some top-tier donuts? Then we got you! Buy 6 donuts and get one free. All donuts are freshly made with our great bakers!
       </p>
