--- a/Contactus.html
+++ b/Contactus.html
@@ -35,6 +35,7 @@
                   <p> <h1 style="justify-content: space-between;"> Location: Eindhoven, Keizersgracht 19 </h1> </p>
                   <p> <h1 style="justify-content: space-between;"> Postcode: 1015CC  </h1> </p>
                 </div class="Contactusmain1">
+                <!-- Dit is de footer -->
                 <div class="footer">
                   © 2024 Dickies-Donuts. All Rights Reserved.
                  <br>
