--- a/Productpageappel.html
+++ b/Productpageappel.html
@@ -2,7 +2,7 @@
 <head>
     <!-- onderstuk is de standard code in de head wat op iedere pagina staat wat zorgt er voor de het css bestand gelinkt is en dat de titel en icon goed zijn-->
   <link rel="stylesheet" href="Styles.css">
-  <title> Pink fairy donut</title>
+  <title> Apple Cider Donut </title>
   <link rel="icon" href="/images/Dickies icon.jpg" type="image">
   
 </head>
@@ -20,15 +20,15 @@
     </ul>
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
-        <p>Pink Fairy Donut </p>
-        <p class="Productpagedescription"> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
+        <p> Apple Cider Donut </p>
+        <p class="Productpagedescription"> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
-        <p> €2.99 </p>
+        <h1> €2.99 </h1>
     </div>
  <!--onderstaande div is de foto zelf-->
 
     <div class="Productpagedonut">
-        <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
+        <img src="/images/Apple cider donut.jpg" alt="donutimg">
     </div>
     
 
