--- a/Productpagebacon.html
+++ b/Productpagebacon.html
@@ -2,7 +2,7 @@
 <head>
     <!-- onderstuk is de standard code in de head wat op iedere pagina staat wat zorgt er voor de het css bestand gelinkt is en dat de titel en icon goed zijn-->
   <link rel="stylesheet" href="Styles.css">
-  <title> Pink fairy donut</title>
+  <title> Bacon Donut </title>
   <link rel="icon" href="/images/Dickies icon.jpg" type="image">
   
 </head>
@@ -20,15 +20,15 @@
     </ul>
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
-        <p>Pink Fairy Donut </p>
-        <p class="Productpagedescription"> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
+        <p> Bacon Donut </p>
+        <p class="Productpagedescription"> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
         <br>
-        <p> €2.99 </p>
+        <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
     </div>
  <!--onderstaande div is de foto zelf-->
 
     <div class="Productpagedonut">
-        <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
+        <img src="/images/Bacon donut.png" alt="donutimg">
     </div>
     
 
