--- a/Shop.html
+++ b/Shop.html
@@ -24,14 +24,17 @@
     <h1 class="header"> Shop Now </h1>
     </div>
           <!-- De code van 27 t/m 139 zijn allemaal identiek aan elkaar, dus doe ik alleen bij de eerste donut een uitgebreide verklaring van de code -->
-    <div class="Product"> 
+<a class="ProductpageA" href="ProductpagePink.html">
+          <div class="Product"> 
       <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
-      <h1> Pink Fiary Donut </h1> <!-- Is de naam van de donut -->
+      <h1> Pink Fairy Donut </h1> <!-- Is de naam van de donut -->
       <br> 
       <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
       <br> 
     <h1> €2.99 </h1> <!-- Prijs van de donut -->
   </div>
+</a>
+<a class="ProductpageA" href="ProductpagePink.html">
 
     <div class="Product">
       <img src="/images/Brownie Donut.jpg" alt="donutpic">
@@ -41,6 +44,8 @@
       <br>
       <h1> €2.99 </h1>
     </div>
+</a>
+    <a class="ProductpageA" href="ProductpagePink.html">
 
     <div class="Product">
       <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
@@ -50,7 +55,7 @@
       <br>
       <h1> €2.99 </h1>
     </div>
-
+    </a>
     <div class="Product">
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <h1> Confetti Donut </h1>
