--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
       </p>
     </div>
 <!-- Onderstaande div is de eerste donut-->
-<a class="ProductpageA"   href="Productpage.html">    
+<a class="ProductpageA"   href="ProductpagePink.html">    
   <div class="Product">
       <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
       <p class="donuttext"> Pink Fairy Donut </p>
