--- a/Productpagebacon.html
+++ b/Productpagebacon.html
@@ -21,9 +21,9 @@
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
         <p> Bacon Donut </p>
-        <p class="Productpagedescription"> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
+        <p class="Productpagedescription"> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
-        <h1> <s class="deal"> €2.99 </s> €1.99 </h1>
+        <p> <s class="deal"> €2.99 </s> €1.99 </p>
     </div>
  <!--onderstaande div is de foto zelf-->
 
