--- a/Productpageconfetti.html
+++ b/Productpageconfetti.html
@@ -20,15 +20,15 @@
     </ul>
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
-        <p>Pink Fairy Donut </p>
-        <p class="Productpagedescription"> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
+        <p> Confetti Donut </p>
+        <p class="Productpagedescription"> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
-        <p> €2.99 </p>
+        <p> <s class="deal"> €2.99 </s> €1.99 </p>
     </div>
  <!--onderstaande div is de foto zelf-->
 
     <div class="Productpagedonut">
-        <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
+        <img src="/images/Confetti Donut.jpg" alt="donutimg">
     </div>
     
 
