--- a/Productpagemacha.html
+++ b/Productpagemacha.html
@@ -20,15 +20,15 @@
     </ul>
  <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
-        <p>Pink Fairy Donut </p>
-        <p class="Productpagedescription"> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
+        <p> Matcha Donut </p>
+        <p class="Productpagedescription"> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
     </div>
  <!--onderstaande div is de foto zelf-->
 
     <div class="Productpagedonut">
-        <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
+        <img src="/images/Green tea Matcha donut.avif" alt="donutimg">
     </div>
     
 
