--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
     </div>
   </a>
 <!-- Onderstaande div is de tweede donut-->
-<a class="ProductpageA"   href="Productpage.html">
+<a class="ProductpageA"   href="Productpagecookie.html">
       <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutimg">
       <p class="donuttext"> Cookie Monster Donut </p>
@@ -54,7 +54,7 @@
     </div>
     </a>
 <!-- Onderstaande div is de derde donut-->
-<a class="ProductpageA"   href="Productpage.html">
+<a class="ProductpageA"   href="Productpagebanana.html">
     <div class="Product">
       <img src="/images/Banana donut.avif" alt="donutimg">
       <p class="donuttext"> Banana Split Donut </p>
