--- a/Productpageconfetti.html
+++ b/Productpageconfetti.html
@@ -23,7 +23,7 @@
         <p> Confetti Donut </p>
         <p class="Productpagedescription"> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
-        <p> <s class="deal"> €2.99 </s> €1.99 </p>
+        <p> <s class="dealproductpage"> €2.99 </s> €1.99 </p>
     </div>
  <!--onderstaande div is de foto zelf-->
 
