--- a/Shop.html
+++ b/Shop.html
@@ -23,50 +23,53 @@
 <div class="Contactusmain1"> 
     <h1 class="header"> Shop Now </h1>
     </div>
-          <!-- De code van 27 t/m 139 zijn allemaal identiek aan elkaar, dus doe ik alleen bij de eerste donut een uitgebreide verklaring van de code -->
+<!-- De code van 27 t/m 139 zijn allemaal identiek aan elkaar, dus doe ik alleen bij de eerste donut een uitgebreide verklaring van de code -->
+<!--Pink Fairy Donut-->
 <a class="ProductpageA" href="ProductpagePink.html">
-          <div class="Product"> 
-      <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
-      <h1> Pink Fairy Donut </h1> <!-- Is de naam van de donut -->
-      <br> 
-      <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
-      <br> 
+  <div class="Product"> 
+    <img src="/images/Pink fairy Donut.jpg" alt="donutpic"> <!-- Hiermee verwijzen we naar de afbeelding van de donut -->
+    <h1> Pink Fairy Donut </h1> <!-- Is de naam van de donut -->
+    <br> 
+    <p> The Pink Fairy Donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p> <!-- Beschrijving van de donut -->
+    <br> 
     <h1> €2.99 </h1> <!-- Prijs van de donut -->
   </div>
 </a>
-<a class="ProductpageA" href="ProductpagePink.html">
-
-    <div class="Product">
-      <img src="/images/Brownie Donut.jpg" alt="donutpic">
-      <h1> Brownie Donut </h1>
-      <br>
-      <p> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
+<!-- Brownie Donut-->
+<a class="ProductpageA" href="Productpagebrownie.html">
+  <div class="Product">
+    <img src="/images/Brownie Donut.jpg" alt="donutpic">
+    <h1> Brownie Donut </h1>
+    <br>
+    <p> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles.</p>
+    <br>
+    <h1> €2.99 </h1>
+  </div>
 </a>
-    <a class="ProductpageA" href="ProductpagePink.html">
-
-    <div class="Product">
-      <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
-      <h1> Sugared Donut </h1>
-      <br>
-      <p> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
-    </a>
+<!-- Sugared Donut-->
+<a class="ProductpageA" href="Productpagesugar.html">
+  <div class="Product">
+    <img src="/images/Gesuikerde donut.jpg" alt="donutpic">
+    <h1> Sugared Donut </h1>
+    <br>
+    <p> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </div>
+</a>
+<!--Confetti Donut-->
+<a class="ProductpageA" href="Productpageconfetti.html">
     <div class="Product">
       <img src="/images/Confetti Donut.jpg" alt="donutpic">
       <h1> Confetti Donut </h1>
       <br>
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped 
-        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
-        with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
+      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>
-
+  </a>
+<!--Cookie Monster Donut-->
+<a class="ProductpageA" href="Productpagecookie.html">
     <div class="Product">
       <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
       <h1> Cookie Monster Donut </h1>
@@ -75,7 +78,9 @@
       <br>
       <h1> €2.99 </h1>
     </div>
-
+</a>
+<!--Banana Split Donut-->
+<a class="ProductpageA" href="Productpagebanana.html">
     <div class="Product">
       <img src="/images/Banana donut.avif" alt="donutpic">
       <h1> Banana Split Donut </h1>
@@ -86,18 +91,20 @@
       <br>
       <h1> €2.99 </h1>     
     </div>
-
+</a>
+<!-- Apple Cider Donut-->
+<a class="ProductpageA" href="Productpageappel.html">
     <div class="Product">
       <img src="/images/Apple cider donut.jpg" alt="donutpic">
       <h1> Apple Cider Donut </h1>
       <br>
-      <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! 
-        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
-        The donut is topped with cinnamon sugar and contains no filling. </p>
+      <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
-
+</a>
+<!-- BlueBerry Donut-->
+<a class="ProductpageA" href="Productpageblueberry.html">
     <div class="Product">
       <img src="/images/Blueberry donut.avif" alt="donutpic">
       <h1> Blueberry Donut </h1>
@@ -106,16 +113,20 @@
       <br>
       <h1> €2.99 </h1>
     </div> 
-
+</a>
+<!-- KingsDay Donut -->
+<a class="ProductpageA" href="Productpagekingsday.html">
     <div class="Product">
       <img src="/images/Koningsdag donut.jpg" alt="donutpic">
-      <h1> Kingsday Donut </h1>
+      <h1> KingsDay Donut </h1>
       <br>
       <p> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. </p>
       <br>
       <h1> €2.99 </h1>
     </div>  
-
+</a>
+<!--Lemon Donut-->
+<a class="ProductpageA" href="Productpagelemon.html">
     <div class="Product">
       <img src="/images/Lemon donut.jpg" alt="donutpic">
       <h1> Lemon Donut </h1>
@@ -124,7 +135,9 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
-
+</a>
+<!--Oreo Donut-->
+<a class="ProductpageA" href="Productpageoreo.html">
     <div class="Product">
       <img src="/images/Oreo Donut.jpg" alt="donutpic">
       <h1> Oreo Donut </h1>
@@ -133,7 +146,9 @@
       <br>
       <h1> €2.99 </h1>
     </div>  
-
+</a>
+<!-- jelly Donut-->
+<a class="ProductpageA" href="Productpagejelly.html">
     <div class="Product">
       <img src="/images/Jelly donut.jpg" alt="donutpic">
       <h1> Jelly Donut </h1>
@@ -141,7 +156,8 @@
       <p> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. </p>
       <br>
       <h1> €2.99 </h1>
-    </div>  
+    </div>
+</a>  
 <!-- Onderstaande Div is de Unusual Donuts text. -->
     <div class="unusualdonuts">
       <p>
@@ -149,6 +165,8 @@
       </p>
     </div>
 <!-- Dit is een aparte sectie voor de "unusual" donuts. Regel 135 t/m 159 is identitiek aan elkaar, dus leg ik de eerste donut alleen uitgebreid uit. -->
+ <!-- Spicy Donut-->
+<a class="ProductpageA" href="Productpagespicy.html">
     <div class="Product"> <!-- om te groeperen -->
       <img src="/images/Spicy Donut.jpg" alt="donutpic"> <!-- De afbeelding van de donut -->
       <h1> Spicy Donut </h1> <!-- Naam van de donut -->
@@ -157,7 +175,9 @@
       <br>
       <h1> €2.99 </h1> <!-- Prijs van de donut -->
     </div>  
-
+</a>
+<!-- bacon Donut-->
+<a class="ProductpageA" href="Productpagebacon.html">
     <div class="Product">
       <img src="/images/Bacon donut.png" alt="donutpic">
       <h1> Bacon Donut </h1>
@@ -166,7 +186,9 @@
       <br>
       <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
     </div>  
-
+</a>
+<!-- matcha Donut-->
+<a class="ProductpageA" href="Productpagemacha.html">
     <div class="Product">
       <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
       <h1> Matcha Donut </h1>
@@ -174,7 +196,8 @@
       <p> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. </p>
       <br>
       <h1> €2.99 </h1>
-    </div> 
+    </div>
+</a> 
 <!-- onderstaande div is de footer-->
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
