--- a/Index.html
+++ b/Index.html
@@ -32,40 +32,38 @@
       </p>
     </div>
 <!-- Onderstaande div is de eerste donut-->
-<a class="ProductpageA"   href="ProductpagePink.html">    
-  <div class="Product">
-      <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
-      <p class="donuttext"> Pink Fairy Donut </p>
-      <br>
-      <p> The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
+<div class="Product">
+  <a class="ProductpageA"   href="ProductpagePink.html">
+    <img src="/images/Pink fairy Donut.jpg" alt="donutimg">
+    <p class="donuttext"> Pink Fairy Donut </p>
+    <br>
+    <p> The Pink Fairy donut is a tasty donut for all strawberry lovers. The donut contains strawberry filling and is topped with rainbow sprinkles. </p>
+    <br>
+    <h1> €2.99 </h1>
   </a>
+</div> 
 <!-- Onderstaande div is de tweede donut-->
-<a class="ProductpageA"   href="Productpagecookie.html">
-      <div class="Product">
-      <img src="/images/Cookie monster donutt.jpg" alt="donutimg">
-      <p class="donuttext"> Cookie Monster Donut </p>
-      <br>
-      <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
-      <br>
-      <h1> €2.99  </h1>
-    </div>
-    </a>
+<div class="Product">
+  <a class="ProductpageA"   href="Productpagecookie.html">
+    <img src="/images/Cookie monster donutt.jpg" alt="donutimg">
+    <p class="donuttext"> Cookie Monster Donut </p>
+    <br>
+    <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
+    <br>
+    <h1> €2.99  </h1>
+  </a>
+</div>
 <!-- Onderstaande div is de derde donut-->
-<a class="ProductpageA"   href="Productpagebanana.html">
-    <div class="Product">
-      <img src="/images/Banana donut.avif" alt="donutimg">
-      <p class="donuttext"> Banana Split Donut </p>
-      <br>
-      <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
-        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
-        The donut contains no filling and is topped with white flaky sprinkles.  </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
-</a>
+<div class="Product">
+  <a class="ProductpageA"   href="Productpagebanana.html">
+    <img src="/images/Banana donut.avif" alt="donutimg">
+    <p class="donuttext"> Banana Split Donut </p>
+    <br>
+    <p> The Banana Split Donut is a flavorous donut for people who like banana's. The donut contains no filling and is topped with white flaky sprinkles.  </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>
 <!--onderstaande div is de Footer -->
     <br>
     <br>
