--- a/Shop.html
+++ b/Shop.html
@@ -58,146 +58,144 @@
   </a>
 </div>
 <!--Confetti Donut-->
-<a class="ProductpageA" href="Productpageconfetti.html">
-    <div class="Product">
-      <img src="/images/Confetti Donut.jpg" alt="donutpic">
-      <h1> Confetti Donut </h1>
-      <br>
-      <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
-      <br>
-      <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
-    </div>
+<div class="Product">
+  <a class="ProductpageA" href="Productpageconfetti.html">
+    <img src="/images/Confetti Donut.jpg" alt="donutpic">
+    <h1> Confetti Donut </h1>
+    <br>
+    <p> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! </p>
+    <br>
+    <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
   </a>
+</div>
 <!--Cookie Monster Donut-->
-<a class="ProductpageA" href="Productpagecookie.html">
-    <div class="Product">
-      <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
-      <h1> Cookie Monster Donut </h1>
-      <br>
-      <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpagecookie.html">
+    <img src="/images/Cookie monster donutt.jpg" alt="donutpic">
+    <h1> Cookie Monster Donut </h1>
+    <br>
+    <p> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>
 <!--Banana Split Donut-->
-<a class="ProductpageA" href="Productpagebanana.html">
-    <div class="Product">
-      <img src="/images/Banana donut.avif" alt="donutpic">
-      <h1> Banana Split Donut </h1>
-      <br>
-      <p> The Banana Split Donut is a flavorous donut for people who like banana's. 
-        <br> <!-- een witregel anders zit de tekst zo dicht bij de border van de box -->
-        The donut contains no filling and is topped with white flaky sprinkles.  </p>
-      <br>
-      <h1> €2.99 </h1>     
-    </div>
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpagebanana.html">
+    <img src="/images/Banana donut.avif" alt="donutpic">
+    <h1> Banana Split Donut </h1>
+    <br>
+    <p> The Banana Split Donut is a flavorous donut for people who like banana's. The donut contains no filling and is topped with white flaky sprinkles.  </p>
+    <br>
+    <h1> €2.99 </h1>    
+  </a> 
+</div>
 <!-- Apple Cider Donut-->
-<a class="ProductpageA" href="Productpageappel.html">
-    <div class="Product">
-      <img src="/images/Apple cider donut.jpg" alt="donutpic">
-      <h1> Apple Cider Donut </h1>
-      <br>
-      <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpageappel.html">
+    <img src="/images/Apple cider donut.jpg" alt="donutpic">
+    <h1> Apple Cider Donut </h1>
+    <br>
+    <p> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and contains no filling. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>  
 <!-- BlueBerry Donut-->
-<a class="ProductpageA" href="Productpageblueberry.html">
-    <div class="Product">
-      <img src="/images/Blueberry donut.avif" alt="donutpic">
-      <h1> Blueberry Donut </h1>
-      <br>
-      <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div> 
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpageblueberry.html">
+    <img src="/images/Blueberry donut.avif" alt="donutpic">
+    <h1> Blueberry Donut </h1>
+    <br>
+    <p> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles. </p>
+    <br>
+    <h1> €2.99 </h1>
+   </a>
+</div> 
 <!-- KingsDay Donut -->
-<a class="ProductpageA" href="Productpagekingsday.html">
-    <div class="Product">
-      <img src="/images/Koningsdag donut.jpg" alt="donutpic">
-      <h1> KingsDay Donut </h1>
-      <br>
-      <p> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpagekingsday.html">
+    <img src="/images/Koningsdag donut.jpg" alt="donutpic">
+    <h1> KingsDay Donut </h1>
+    <br>
+    <p> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>  
 <!--Lemon Donut-->
-<a class="ProductpageA" href="Productpagelemon.html">
-    <div class="Product">
-      <img src="/images/Lemon donut.jpg" alt="donutpic">
-      <h1> Lemon Donut </h1>
-      <br>
-      <p> The Lemon Donut is a donut for people who love sour food. The donut is topped with a yellow glazing which is sour and contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpagelemon.html">
+    <img src="/images/Lemon donut.jpg" alt="donutpic">
+    <h1> Lemon Donut </h1>
+    <br>
+    <p> The Lemon Donut is a donut for people who love sour food. The donut is topped with a yellow glazing which is sour and contains no filling. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>  
 <!--Oreo Donut-->
-<a class="ProductpageA" href="Productpageoreo.html">
-    <div class="Product">
-      <img src="/images/Oreo Donut.jpg" alt="donutpic">
-      <h1> Oreo Donut </h1>
-      <br>
-      <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>  
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpageoreo.html">
+    <img src="/images/Oreo Donut.jpg" alt="donutpic">
+    <h1> Oreo Donut </h1>
+    <br>
+    <p> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>
+</div>  
 <!-- jelly Donut-->
-<a class="ProductpageA" href="Productpagejelly.html">
-    <div class="Product">
-      <img src="/images/Jelly donut.jpg" alt="donutpic">
-      <h1> Jelly Donut </h1>
-      <br>
-      <p> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
-</a>  
+<div class="Product">
+  <a class="ProductpageA" href="Productpagejelly.html">
+    <img src="/images/Jelly donut.jpg" alt="donutpic">
+    <h1> Jelly Donut </h1>
+    <br>
+    <p> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a>  
+</div>
 <!-- Onderstaande Div is de Unusual Donuts text. -->
-    <div class="unusualdonuts">
-      <p>
+<div class="unusualdonuts">
+    <p>
         Unusual Donuts
-      </p>
-    </div>
+    </p>
+</div>
 <!-- Dit is een aparte sectie voor de "unusual" donuts. Regel 135 t/m 159 is identitiek aan elkaar, dus leg ik de eerste donut alleen uitgebreid uit. -->
  <!-- Spicy Donut-->
-<a class="ProductpageA" href="Productpagespicy.html">
-    <div class="Product"> <!-- om te groeperen -->
-      <img src="/images/Spicy Donut.jpg" alt="donutpic"> <!-- De afbeelding van de donut -->
-      <h1> Spicy Donut </h1> <!-- Naam van de donut -->
-      <br> 
-      <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p> <!-- Beschrijving van de donu -->
-      <br>
-      <h1> €2.99 </h1> <!-- Prijs van de donut -->
-    </div>  
-</a>
+<div class="Product"> <!-- om te groeperen -->
+  <a class="ProductpageA" href="Productpagespicy.html">
+    <img src="/images/Spicy Donut.jpg" alt="donutpic"> <!-- De afbeelding van de donut -->
+    <h1> Spicy Donut </h1> <!-- Naam van de donut -->
+    <br> 
+    <p> The Spicy Donut is a donut for the people who love spicy food! It contains as much scolville as the Carolina Reaper! It contains no filling. </p> <!-- Beschrijving van de donu -->
+    <br>
+    <h1> €2.99 </h1> <!-- Prijs van de donut -->
+  </a>
+</div>  
 <!-- bacon Donut-->
-<a class="ProductpageA" href="Productpagebacon.html">
-    <div class="Product">
-      <img src="/images/Bacon donut.png" alt="donutpic">
-      <h1> Bacon Donut </h1>
-      <br>
-      <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
-      <br>
-      <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
-    </div>  
-</a>
+<div class="Product">
+  <a class="ProductpageA" href="Productpagebacon.html">
+    <img src="/images/Bacon donut.png" alt="donutpic">
+    <h1> Bacon Donut </h1>
+    <br>
+    <p> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. </p>
+    <br>
+    <h1> <s class="deal"> €2.99 </s> €1.99 </h1> <!-- We gebruiken <s> </s> om aan te geven dat iets doorgestreept moet zijn net zoals bij een deal op een website -->
+  </a>
+</div>  
 <!-- matcha Donut-->
-<a class="ProductpageA" href="Productpagemacha.html">
-    <div class="Product">
-      <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
-      <h1> Matcha Donut </h1>
-      <br>
-      <p> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. </p>
-      <br>
-      <h1> €2.99 </h1>
-    </div>
-</a> 
+<div class="Product">
+  <a class="ProductpageA" href="Productpagemacha.html">
+    <img src="/images/Green tea Matcha donut.avif" alt="donutpic">
+    <h1> Matcha Donut </h1>
+    <br>
+    <p> The Matcha Donut is a donut for people who love green tea. The donut is topped with matcha glazing and sprinkles. It contains no filling. </p>
+    <br>
+    <h1> €2.99 </h1>
+  </a> 
+</div>
 <!-- onderstaande div is de footer-->
     <div class="footer">
       © 2024 Dickies-Donuts. All Rights Reserved.
