--- a/Productpagebacon.html
+++ b/Productpagebacon.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Bacon Donut is a rather weird donut flavour but dont judge a book by its cover! It has a great taste and the bacon on top is always crispy. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> <s class="dealproductpage"> €2.99 </s> €1.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
