--- a/Productpagebrownie.html
+++ b/Productpagebrownie.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Brownie Donut is a tasty chocolate donut for chocolate lovers. The donut contains chocolate spread filling and is topped with chocolate sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
