--- a/Productpageconfetti.html
+++ b/Productpageconfetti.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Confetti donut is a colorful donut for party go'ers. The donut is topped with confetti sprinkles and it doesn't contain a filling. Now on sale! For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> <s class="dealproductpage"> €2.99 </s> €1.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
