--- a/Productpagecookie.html
+++ b/Productpagecookie.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Cookie Monster Donut is a donut for the Cookie Monster fans out there! The donut is topped with sprinkles and a tasteful cookie it contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
