--- a/Productpagelemon.html
+++ b/Productpagelemon.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Lemon Donut is a donut for people who love sour food. The donut is topped with a yellow glazing which is sour and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
