--- a/Productpageappel.html
+++ b/Productpageappel.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Apple Cider Donut is a donut for all the cinnamon lovers out there! The donut is topped with cinnamon sugar and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <h1> €2.99 </h1>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
