--- a/Productpagebanana.html
+++ b/Productpagebanana.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Banana Split Donut is a flavorous donut for people who like banana's. The donut contains no filling and is topped with white flaky sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
