--- a/Productpageblueberry.html
+++ b/Productpageblueberry.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Blueberry Donut is a tasty donut for the blueberry lovers. It contains a blueberry filling and is topped with blueberry glazing and sprinkles. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
