--- a/Productpagejelly.html
+++ b/Productpagejelly.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Jelly Donut is a classic donut around the world. The donut contains strawberry jelly filling and is topped with some powdered sugar. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
