--- a/Productpagekingsday.html
+++ b/Productpagekingsday.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Kingsday Donut is a donut for all the Dutchies out there. The donut contains orange glazing for our national colors on our king's birthday. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
