--- a/Productpageoreo.html
+++ b/Productpageoreo.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Oreo Donut is for the Oreo lovers out there. The donut is topped with oreo crumbles and white chocolate glazing. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
