--- a/Productpagesugar.html
+++ b/Productpagesugar.html
@@ -24,6 +24,7 @@
         <p class="Productpagedescription"> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
         <br>
         <p> €2.99 </p>
+        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
  <!--onderstaande div is de foto zelf-->
 
