--- a/Productpagesugar.html
+++ b/Productpagesugar.html
@@ -1,45 +1,42 @@
 <html> 
-<head>
+  <head>
     <!-- onderstuk is de standard code in de head wat op iedere pagina staat wat zorgt er voor de het css bestand gelinkt is en dat de titel en icon goed zijn-->
-  <link rel="stylesheet" href="Styles.css">
-  <title> Pink fairy donut</title>
-  <link rel="icon" href="/images/Dickies icon.jpg" type="image">
-  
-</head>
+    <link rel="stylesheet" href="Styles.css">
+    <title> Sugared Donut</title>
+    <link rel="icon" href="/images/Dickies icon.jpg" type="image">
+  </head>
   <body>
     <!--onderstaande ul is de navbar -->
     <ul class="sticky">
       <li>
       <img src="/images/Dickies_logo.png" class="Logo">
-    </li>
+      </li>
       <li style="text-align: right;">
-        <a href="Contactus.html"> Contact Us</a> 
-        <a href="Shop.html"> Shop Now </a>
-        <a href="Index.html"> Home </a>
+      <a href="Contactus.html"> Contact Us</a> 
+      <a href="Shop.html"> Shop Now </a>
+      <a href="Index.html"> Home </a>
       </li>
     </ul>
- <!--onderstaande div is de tekst naast de donut-->
+
+    <!--onderstaande div is de tekst naast de donut-->
     <div class="Productpagedonuttext">
-        <p> Sugared Donut </p>
-        <p class="Productpagedescription"> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
-        <br>
-        <p> €2.99 </p>
-        <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
+      <p> Sugared Donut </p>
+      <p class="Productpagedescription"> The Sugared Donut is a sweet and plain donut for the people who want something simple. The donut is topped with sugar and contains no filling. For a price of €2.99 you can get this donut! The shipping time is around 3 days. </p>
+      <br>
+      <p> €2.99 </p>
+      <img src="/images/Add to cart.webp" alt="add to cart" class="AddtoCart">
     </div>
- <!--onderstaande div is de foto zelf-->
 
+    <!--onderstaande div is de foto zelf-->
     <div class="Productpagedonut">
-        <img src="/images/Gesuikerde donut.jpg" alt="donutimg">
+      <img src="/images/Gesuikerde donut.jpg" alt="donutimg">
     </div>
-    
 
-
-<!-- onderstaande div is de footer-->
- <div class="footer">
- © 2024 Dickies-Donuts. All Rights Reserved.
-<br>
-Terms of Service | Privacy & Cookies | All prices include VAT
-                                                   
-</div>
+    <!-- onderstaande div is de footer-->
+    <div class="footer">
+      © 2024 Dickies-Donuts. All Rights Reserved.
+      <br>
+      Terms of Service | Privacy & Cookies | All prices include VAT
+    </div>
   </body>
 </html>
