--- a/Productpagecookie.html
+++ b/Productpagecookie.html
@@ -14,7 +14,7 @@
       <li style="text-align: right;">
       <a href="Contactus.html"> Contact Us</a> 
       <a href="Shop.html"> Shop Now </a>
-      <a href="Index.html"> Home </a>
+      <a href="index.html"> Home </a>
       </li>
     </ul>
     
